styles/styles.css
/* ... */
.shipping-companies-list {
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  color: black;
  padding: 0;
  margin: 0;
  margin-bottom: 75px;
  list-style-type: none;
}

.shipping-companies-item {
  margin-bottom: 28px;
}

.shipping-companies-item:last-of-type {
  margin-bottom: 0;
}

.about-info-link {
  align-self: flex-start;
  margin-top: auto;
}

.about-info-list {
  display: flex;
  padding: 50px 0 0;
  margin: 0;
  justify-content: space-between;
  list-style-type: none;
}

.about-info-text {
  margin: 0;
  margin-bottom: 30px;
}

.about-info-item {
  display: flex;
  flex-direction: column;
  width: 560px;
}

.contacts-sub-title {
  font-weight: bold;
  font-size: 24px;
  line-height: 30px;
  margin: 0;
  margin-bottom: 15px;
  padding: 0;
}

.font-style-normal {
  font-style: normal;
}

.contacts-phone {
  text-decoration: none;
  color: inherit;
}

.about-info-schedule-table {
  border: 0;
  border-spacing: 0;
  border-collapse: collapse;
}

.about-info-schedule-table td {
  padding: 0;
}

.newsletter {
  padding-top: 75px;
  padding-bottom: 131px;
  background-color: #F0F0F0;
  min-width: 1160px;
}

.newsletter-section {
  display: flex;
  align-items: baseline;
  margin-bottom: 53px;
}

.newsletter-section:last-child {
  margin-bottom: 0;
}

.flex-container {
  display: flex;
}

.newsletter-title {
  width: 560px;
  margin: 0;
  margin-right: 40px;
}

.newsletter-text {
  width: 560px;
}

.newsletter-form {
  display: flex;
}

.input-email {
  width: 560px;
  margin-right: 40px;
}

.button-bordered {
  border: 3px solid rgba(0, 0, 0, 0.1);
  background: inherit;
}

.button-newsletter {
  width: 260px;
  height: 55px;
  margin-right: 171px;
}

.button-pagination-show-more {
  font-family: "Raleway", sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 16px;
  line-height: 19px;
  width: 760px;
  color: black;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  margin-top: 0;
  margin-bottom: 51px;
  margin-left: auto;
  margin-right: auto;
}

.newsletter-note {
  background-color: inherit;
}

.footer-container {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  width: 1160px;
  padding-top: 62px;
  padding-bottom: 61px;
  margin-left: auto;
  margin-right: auto;
}

.page-footer {
  /*display: flex;*/
  min-width: 1160px;
  color: white;
  background: #444444;
}

.footer-navigation-link {
  background-color: inherit;
  color: #FFFFFF;
  text-align: center;
  padding: 5px 0;
}

.footer-address {
  width: 240px;
  font-size: 16px;
  line-height: 19px;
}

.footer-contacts-logo {
  margin-bottom: 35px;
}

.footer-navigation {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 458px;
}

.footer-navigation-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  list-style-type: none;
  min-width: 620px;
  margin: 0;
  margin-bottom: 53px;
  padding: 0;
}

.footer-navigation-item {
  width: 148px;
  margin-right: 7px;
}

.footer-navigation-item:last-of-type {
  margin-right: 0;
}

.social-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  list-style-type: none;
  width: 150px;
  margin: 0;
  padding: 0;
  column-gap: 15px;
}

.social-item-link {
  display: block;
  width: 40px;
  height: 40px;
}

.social-list-item {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
}

.footer-phone {
  font-size: 16px;
  line-height: 30px;
  text-align: right;
}

.breadcrumbs {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
  list-style-type: none;
  column-gap: 35px;
}

.breadcrumbs-item-link {
  font-size: 16px;
  line-height: 19px;
  color: black;
  text-decoration: none;
  opacity: 0.6;
}

.main-header-inner-container {
  margin-left: 60px;
  margin-bottom: 50px;
}

.catalog-right-column {
  grid-column: 3/4;
  grid-row: 1/3;
}

.catalog-products {
  display: grid;
  grid-template-columns: 1fr 330px 830px 1fr;
  grid-template-rows: auto 1fr;
}

.product-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 40px;
  padding: 0;
  margin: 0;
  margin-bottom: 44px;
}

.promoted-product-card-list {
  margin: 0;
  padding: 0;
}

.slider-button {
  border: 0;
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.promoted-product-card {
  display: flex;
  background-image: -webkit-linear-gradient(bottom, #FFE17F 152px, white 0);
  background-image: -moz-linear-gradient(bottom, #FFE17F 152px, white 0);
  background-image: -o-linear-gradient(bottom, #FFE17F 152px, white 0);
  background-image: linear-gradient(to bottom, #FFE17F 152px, white 0);
}

.product-card-pagination {
  display: flex;
  grid-column: 2/3;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.product-card {
  width: 360px;
  display: grid;
  grid-template-columns: min-content auto;
  /*todo: if fixed 380px height is not set then
   'product-card-image-link' link content is
   higher than image height. Why?*/
  grid-template-rows: 380px min-content;
  row-gap: 32px;
}

.catalog-container {
  grid-column: 3/4;
  grid-row: 2/3;
  width: 760px;
  padding-top: 70px;
  padding-left: 70px;
  background-color: #FFFFFF;
}

.product-card-features {
  display: grid;
  gap: 20px;
  grid-column: 1/3;
  grid-row: 5/6;
  justify-self: start;
  margin-left: 0;
  margin-right: 0;
  margin-top: 70px;
  margin-bottom: 40px;
  padding: 0;
}

.catalog-left-top-column {
  grid-column: 1/3;
  grid-row: 1/2;
  background-color: #DCDCDC;
}

.catalog-left-bottom-column {
  background-color: #EBEBEB;
  grid-column: 1/2;
  grid-row: 2/-1;
}

.catalog-right-top-column {
  grid-column: 4/-1;
  grid-row: 1/2;
  background-color: #EBEBEB;
}

.catalog-filter {
  background: #EBEBEB;
  color: black;
  padding-left: 60px;
  grid-column: 2/3;
  grid-row: 2/3;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
/* ... */

